tools/actdev/actdev.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: actdev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: actdev
  template:
    metadata:
      labels:
        app.kubernetes.io/component: actdev
    spec:
      serviceAccountName: actdev
      containers:
        - name: actdev
          image: IMAGE:TAG
          imagePullPolicy: POLICY
---

apiVersion: v1
kind: Service
metadata:
  name: actdev
spec:
  type: NodePort
  ports:
  - port: 9080
    targetPort: 9080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/component: actdev
