tools/actdev/actdev-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: actdev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: actdev
